# toolbox-agentic

./: .gitignore  .hadolint.yaml  .yamllint.yaml  AGENTS.md  Containerfile  Makefile  README.md  SECURITY.md  TESTING.md  bootstrap.py  entrypoint.py  make-offline-cache.sh  pyproject.toml  run-podman.sh
.github/workflows/: ci.yml
agent-config/: AGENTS.md  CLAUDE.md
agent-runner/: Containerfile  bootstrap.py  run-podman.sh
agent-runner/claude/: settings.json
agent-runner/docs/plans/: implementation-plan.md
agent-runner/egress-proxy/: policy.py
agent-runner/k8s/: job.yaml  secret.example.yaml
ci/scripts/: check-containerfile-tags.sh
claude/: settings.json
docs/plans/: implementation-plan.md
egress-proxy/: Containerfile  policy.py
k8s/: configmap.example.yaml  job-offline.patch.yaml  job.yaml  networkpolicy.yaml  secret.example.yaml
scripts/: make-offline-cache.sh  run-podman.sh
test/: Containerfile.ci
tests/: conftest.py  test_bootstrap.py  test_consistency.py  test_entrypoint.py  test_policy.py  test_proxy_integration.py  test_security_contracts.py
tests/bats/: test_agent_ci_watch.bats  test_agent_clone.bats  test_agent_open_mr.bats  test_agent_open_pr.bats  test_run_podman.bats
tests/bats/helpers/: mocks.bash  setup.bash
