[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "toolbox-agentic"
version = "0.1.0"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
    "ruff>=0.11",
    "pyyaml>=6.0",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S", "A", "C4", "SIM"]
ignore = ["S101", "S104", "S603", "S606", "S607", "SIM105", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that start real servers (proxy integration)",
]
